# babeld-ids

./: Makefile  README.md
config/: babeld-ids.config  babeld-ids.init  script.sh
src/: CMakeLists.txt  main.c  owipcalc-old.h  owipcalc.c  uci.c  uci.h
